syntax = "proto3";

package mss.matrix;

option csharp_namespace = "CourseWork.Worker.Protobuf";

import "matrix.proto";

message WorkerRq {
  PairMatrix rq_data = 1;
  string correlation_id = 2;
}

message WorkerRs {
  Matrix rs_data = 1;
  string correlation_id = 2;
}